added more functionalities

--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
         <p>I worked briefly as a product manager in london before deciding to join this bootcamp to learn web development. you might be wondering why? I have always wanted to be a software engineer long before I became a product manager</p>
       </div>
       <div class="list-container child">
-        <h2 class="childheader">My top five favourite things in no particular order</h2>
+        <h2 class="childheader">My top ten favourite things in no particular order</h2>
         <ol>
           <li>My parents</li>
           <li>Music</li>
           <li>Religion</li>
           <li>Football</li>
           <li>Love</li>
+          <li>Nigeria</li>
+          <li>Jolof rice</li>
+          <li>Real Madrid</li>
+          <li>Interior design</li>
+          <li>Black outfits</li>
         </ol>
       </div>
     </main>
